--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,18 @@
             <version>2.1.0</version>
         </dependency>
 
+        <!--             Security        -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!--            REDIS              -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
